# search

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
memo/: report.md
notebook/: eda.ipynb
src/: delete_index.py  prepare_data.py  search_data.py  setup.py
